--- a/sprint9.ipynb
+++ b/sprint9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "4          1  2017-06-05  57.08"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4  2017-06-01 07:58:00     0.37  14200605875248379450"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "Text(0.5, 0, 'Date')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -533,19 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Merge the first visit date with the orders data:\n",
-    "\n",
-    "orders_data = orders_data.merge(first_visit.reset_index(), on='Uid', how='left')\n",
-    "orders_data['time_to_purchase'] = (pd.to_datetime(orders_data['Buy Ts']) - pd.to_datetime(orders_data['Buy Ts_first'])).dt.total_seconds() / 86400"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -585,27 +573,12 @@
       "3 2017-06-01 00:29:00     0.55  16109239769442553005 2017-06-01 00:29:00   \n",
       "4 2017-06-01 07:58:00     0.37  14200605875248379450 2017-06-01 07:58:00   \n",
       "\n",
-      "   time_to_purchase      Buy Ts_first_y  index      Buy Ts_first_x  \\\n",
-      "0               0.0 2017-06-01 00:10:00  20437 2017-06-01 00:10:00   \n",
-      "1               0.0 2017-06-01 00:25:00  23018 2017-06-01 00:25:00   \n",
-      "2               0.0 2017-06-01 00:27:00  35477 2017-06-01 00:27:00   \n",
-      "3               0.0 2017-06-01 00:29:00  31908 2017-06-01 00:29:00   \n",
-      "4               0.0 2017-06-01 07:58:00  28100 2017-06-01 07:58:00   \n",
-      "\n",
-      "       Buy Ts_first_y  \n",
-      "0 2017-06-01 00:10:00  \n",
-      "1 2017-06-01 00:25:00  \n",
-      "2 2017-06-01 00:27:00  \n",
-      "3 2017-06-01 00:29:00  \n",
-      "4 2017-06-01 07:58:00  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ngoyi\\AppData\\Local\\Temp\\ipykernel_8672\\1076756113.py:1: FutureWarning: Passing 'suffixes' which cause duplicate columns {'Buy Ts_first_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
-      "  orders_data = orders_data.merge(first_visit, on='Uid', how='left')\n"
+      "   time_to_purchase      Buy Ts_first_y  \n",
+      "0               0.0 2017-06-01 00:10:00  \n",
+      "1               0.0 2017-06-01 00:25:00  \n",
+      "2               0.0 2017-06-01 00:27:00  \n",
+      "3               0.0 2017-06-01 00:29:00  \n",
+      "4               0.0 2017-06-01 07:58:00  \n"
      ]
     }
    ],
@@ -617,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
